fix: unable large superchainID to break the UI

--- a/src/components/sidebar/SidebarHeader/styles.module.css
+++ b/src/components/sidebar/SidebarHeader/styles.module.css
@@ -41,7 +41,7 @@
   width: 120px;
   height: 120px;
   border: 4px solid var(--color-secondary-main);
-  border-radius: 6px 0px 6px 6px;
+  /* border-radius: 6px 0px 6px 6px; */
 }
 
 .superchainInfo {
@@ -84,6 +84,10 @@
   font-weight: 600;
   color: var(--color-text-primary);
   font-size: 16px;
+  max-width: 160px;
+  white-space: normal;
+  display: flex;
+  flex-wrap: wrap;
 }
 .superChainId span {
   color: var(--color-secondary-main);
